--- a/proyecto/src/main/resources/static/estilos.css
+++ b/proyecto/src/main/resources/static/estilos.css
@@ -125,6 +125,21 @@ p {
 .boton:hover {
   background-color: #005f99;
 }
+.cuentas {
+  max-width: 600px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.tarjeta-cuenta {
+  padding: 20px;
+  margin-bottom: 25px;
+}
+
+.contenedor-scroll {
+  max-height: 600px;
+  padding: 20px;
+}
 
 
   
